BisonFlexCalculator/parser.output
Terminals unused in grammar

    DONE


State 26 conflicts: 4 shift/reduce
State 27 conflicts: 4 shift/reduce
State 28 conflicts: 4 shift/reduce
State 29 conflicts: 4 shift/reduce
State 30 conflicts: 4 shift/reduce
State 31 conflicts: 4 shift/reduce
State 32 conflicts: 4 shift/reduce
State 33 conflicts: 4 shift/reduce
State 34 conflicts: 4 shift/reduce
State 35 conflicts: 4 shift/reduce
State 36 conflicts: 4 shift/reduce
State 37 conflicts: 4 shift/reduce
State 38 conflicts: 4 shift/reduce
State 39 conflicts: 4 shift/reduce
State 40 conflicts: 4 shift/reduce
State 41 conflicts: 4 shift/reduce


Grammar

    0 $accept: prob $end

    1 prob: ε
    2     | prob line

    3 line: NEW
    4     | fEXP NEW
    5     | EXP NEW
    6     | STR NEW

    7 fEXP: FLOAT
    8     | fEXP ADD fEXP
    9     | fEXP SUBT fEXP
   10     | fEXP MULT fEXP
   11     | fEXP DIV fEXP
   12     | LPAR fEXP RPAR
   13     | EXP ADD fEXP
   14     | EXP SUBT fEXP
   15     | EXP MULT fEXP
   16     | EXP DIV fEXP
   17     | fEXP ADD EXP
   18     | fEXP SUBT EXP
   19     | fEXP MULT EXP
   20     | fEXP DIV EXP
   21     | EXP DIV EXP

   22 EXP: INT
   23    | EXP ADD EXP
   24    | EXP SUBT EXP
   25    | EXP MULT EXP
   26    | LPAR EXP RPAR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT <number> (258) 22
    FLOAT <floating> (259) 7
    STR <string> (260) 6
    ADD (261) 8 13 17 23
    SUBT (262) 9 14 18 24
    MULT (263) 10 15 19 25
    DIV (264) 11 16 20 21
    LPAR (265) 12 26
    RPAR (266) 12 26
    NEW (267) 3 4 5 6
    DONE (268)


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    prob (15)
        on left: 1 2
        on right: 0 2
    line (16)
        on left: 3 4 5 6
        on right: 2
    fEXP <floating> (17)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 4 8 9 10 11 12 13 14 15 16 17 18 19 20
    EXP <number> (18)
        on left: 22 23 24 25 26
        on right: 5 13 14 15 16 17 18 19 20 21 23 24 25 26


State 0

    0 $accept: • prob $end

    $default  reduce using rule 1 (prob)

    prob  go to state 1


State 1

    0 $accept: prob • $end
    2 prob: prob • line

    $end   shift, and go to state 2
    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    STR    shift, and go to state 5
    LPAR   shift, and go to state 6
    NEW    shift, and go to state 7

    line  go to state 8
    fEXP  go to state 9
    EXP   go to state 10


State 2

    0 $accept: prob $end •

    $default  accept


State 3

   22 EXP: INT •

    $default  reduce using rule 22 (EXP)


State 4

    7 fEXP: FLOAT •

    $default  reduce using rule 7 (fEXP)


State 5

    6 line: STR • NEW

    NEW  shift, and go to state 11


State 6

   12 fEXP: LPAR • fEXP RPAR
   26 EXP: LPAR • EXP RPAR

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    LPAR   shift, and go to state 6

    fEXP  go to state 12
    EXP   go to state 13


State 7

    3 line: NEW •

    $default  reduce using rule 3 (line)


State 8

    2 prob: prob line •

    $default  reduce using rule 2 (prob)


State 9

    4 line: fEXP • NEW
    8 fEXP: fEXP • ADD fEXP
    9     | fEXP • SUBT fEXP
   10     | fEXP • MULT fEXP
   11     | fEXP • DIV fEXP
   17     | fEXP • ADD EXP
   18     | fEXP • SUBT EXP
   19     | fEXP • MULT EXP
   20     | fEXP • DIV EXP

    ADD   shift, and go to state 14
    SUBT  shift, and go to state 15
    MULT  shift, and go to state 16
    DIV   shift, and go to state 17
    NEW   shift, and go to state 18


State 10

    5 line: EXP • NEW
   13 fEXP: EXP • ADD fEXP
   14     | EXP • SUBT fEXP
   15     | EXP • MULT fEXP
   16     | EXP • DIV fEXP
   21     | EXP • DIV EXP
   23 EXP: EXP • ADD EXP
   24    | EXP • SUBT EXP
   25    | EXP • MULT EXP

    ADD   shift, and go to state 19
    SUBT  shift, and go to state 20
    MULT  shift, and go to state 21
    DIV   shift, and go to state 22
    NEW   shift, and go to state 23


State 11

    6 line: STR NEW •

    $default  reduce using rule 6 (line)


State 12

    8 fEXP: fEXP • ADD fEXP
    9     | fEXP • SUBT fEXP
   10     | fEXP • MULT fEXP
   11     | fEXP • DIV fEXP
   12     | LPAR fEXP • RPAR
   17     | fEXP • ADD EXP
   18     | fEXP • SUBT EXP
   19     | fEXP • MULT EXP
   20     | fEXP • DIV EXP

    ADD   shift, and go to state 14
    SUBT  shift, and go to state 15
    MULT  shift, and go to state 16
    DIV   shift, and go to state 17
    RPAR  shift, and go to state 24


State 13

   13 fEXP: EXP • ADD fEXP
   14     | EXP • SUBT fEXP
   15     | EXP • MULT fEXP
   16     | EXP • DIV fEXP
   21     | EXP • DIV EXP
   23 EXP: EXP • ADD EXP
   24    | EXP • SUBT EXP
   25    | EXP • MULT EXP
   26    | LPAR EXP • RPAR

    ADD   shift, and go to state 19
    SUBT  shift, and go to state 20
    MULT  shift, and go to state 21
    DIV   shift, and go to state 22
    RPAR  shift, and go to state 25


State 14

    8 fEXP: fEXP ADD • fEXP
   17     | fEXP ADD • EXP

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    LPAR   shift, and go to state 6

    fEXP  go to state 26
    EXP   go to state 27


State 15

    9 fEXP: fEXP SUBT • fEXP
   18     | fEXP SUBT • EXP

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    LPAR   shift, and go to state 6

    fEXP  go to state 28
    EXP   go to state 29


State 16

   10 fEXP: fEXP MULT • fEXP
   19     | fEXP MULT • EXP

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    LPAR   shift, and go to state 6

    fEXP  go to state 30
    EXP   go to state 31


State 17

   11 fEXP: fEXP DIV • fEXP
   20     | fEXP DIV • EXP

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    LPAR   shift, and go to state 6

    fEXP  go to state 32
    EXP   go to state 33


State 18

    4 line: fEXP NEW •

    $default  reduce using rule 4 (line)


State 19

   13 fEXP: EXP ADD • fEXP
   23 EXP: EXP ADD • EXP

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    LPAR   shift, and go to state 6

    fEXP  go to state 34
    EXP   go to state 35


State 20

   14 fEXP: EXP SUBT • fEXP
   24 EXP: EXP SUBT • EXP

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    LPAR   shift, and go to state 6

    fEXP  go to state 36
    EXP   go to state 37


State 21

   15 fEXP: EXP MULT • fEXP
   25 EXP: EXP MULT • EXP

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    LPAR   shift, and go to state 6

    fEXP  go to state 38
    EXP   go to state 39


State 22

   16 fEXP: EXP DIV • fEXP
   21     | EXP DIV • EXP

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    LPAR   shift, and go to state 6

    fEXP  go to state 40
    EXP   go to state 41


State 23

    5 line: EXP NEW •

    $default  reduce using rule 5 (line)


State 24

   12 fEXP: LPAR fEXP RPAR •

    $default  reduce using rule 12 (fEXP)


State 25

   26 EXP: LPAR EXP RPAR •

    $default  reduce using rule 26 (EXP)


State 26

    8 fEXP: fEXP • ADD fEXP
    8     | fEXP ADD fEXP •
    9     | fEXP • SUBT fEXP
   10     | fEXP • MULT fEXP
   11     | fEXP • DIV fEXP
   17     | fEXP • ADD EXP
   18     | fEXP • SUBT EXP
   19     | fEXP • MULT EXP
   20     | fEXP • DIV EXP

    ADD   shift, and go to state 14
    SUBT  shift, and go to state 15
    MULT  shift, and go to state 16
    DIV   shift, and go to state 17

    ADD       [reduce using rule 8 (fEXP)]
    SUBT      [reduce using rule 8 (fEXP)]
    MULT      [reduce using rule 8 (fEXP)]
    DIV       [reduce using rule 8 (fEXP)]
    $default  reduce using rule 8 (fEXP)


State 27

   13 fEXP: EXP • ADD fEXP
   14     | EXP • SUBT fEXP
   15     | EXP • MULT fEXP
   16     | EXP • DIV fEXP
   17     | fEXP ADD EXP •
   21     | EXP • DIV EXP
   23 EXP: EXP • ADD EXP
   24    | EXP • SUBT EXP
   25    | EXP • MULT EXP

    ADD   shift, and go to state 19
    SUBT  shift, and go to state 20
    MULT  shift, and go to state 21
    DIV   shift, and go to state 22

    ADD       [reduce using rule 17 (fEXP)]
    SUBT      [reduce using rule 17 (fEXP)]
    MULT      [reduce using rule 17 (fEXP)]
    DIV       [reduce using rule 17 (fEXP)]
    $default  reduce using rule 17 (fEXP)


State 28

    8 fEXP: fEXP • ADD fEXP
    9     | fEXP • SUBT fEXP
    9     | fEXP SUBT fEXP •
   10     | fEXP • MULT fEXP
   11     | fEXP • DIV fEXP
   17     | fEXP • ADD EXP
   18     | fEXP • SUBT EXP
   19     | fEXP • MULT EXP
   20     | fEXP • DIV EXP

    ADD   shift, and go to state 14
    SUBT  shift, and go to state 15
    MULT  shift, and go to state 16
    DIV   shift, and go to state 17

    ADD       [reduce using rule 9 (fEXP)]
    SUBT      [reduce using rule 9 (fEXP)]
    MULT      [reduce using rule 9 (fEXP)]
    DIV       [reduce using rule 9 (fEXP)]
    $default  reduce using rule 9 (fEXP)


State 29

   13 fEXP: EXP • ADD fEXP
   14     | EXP • SUBT fEXP
   15     | EXP • MULT fEXP
   16     | EXP • DIV fEXP
   18     | fEXP SUBT EXP •
   21     | EXP • DIV EXP
   23 EXP: EXP • ADD EXP
   24    | EXP • SUBT EXP
   25    | EXP • MULT EXP

    ADD   shift, and go to state 19
    SUBT  shift, and go to state 20
    MULT  shift, and go to state 21
    DIV   shift, and go to state 22

    ADD       [reduce using rule 18 (fEXP)]
    SUBT      [reduce using rule 18 (fEXP)]
    MULT      [reduce using rule 18 (fEXP)]
    DIV       [reduce using rule 18 (fEXP)]
    $default  reduce using rule 18 (fEXP)


State 30

    8 fEXP: fEXP • ADD fEXP
    9     | fEXP • SUBT fEXP
   10     | fEXP • MULT fEXP
   10     | fEXP MULT fEXP •
   11     | fEXP • DIV fEXP
   17     | fEXP • ADD EXP
   18     | fEXP • SUBT EXP
   19     | fEXP • MULT EXP
   20     | fEXP • DIV EXP

    ADD   shift, and go to state 14
    SUBT  shift, and go to state 15
    MULT  shift, and go to state 16
    DIV   shift, and go to state 17

    ADD       [reduce using rule 10 (fEXP)]
    SUBT      [reduce using rule 10 (fEXP)]
    MULT      [reduce using rule 10 (fEXP)]
    DIV       [reduce using rule 10 (fEXP)]
    $default  reduce using rule 10 (fEXP)


State 31

   13 fEXP: EXP • ADD fEXP
   14     | EXP • SUBT fEXP
   15     | EXP • MULT fEXP
   16     | EXP • DIV fEXP
   19     | fEXP MULT EXP •
   21     | EXP • DIV EXP
   23 EXP: EXP • ADD EXP
   24    | EXP • SUBT EXP
   25    | EXP • MULT EXP

    ADD   shift, and go to state 19
    SUBT  shift, and go to state 20
    MULT  shift, and go to state 21
    DIV   shift, and go to state 22

    ADD       [reduce using rule 19 (fEXP)]
    SUBT      [reduce using rule 19 (fEXP)]
    MULT      [reduce using rule 19 (fEXP)]
    DIV       [reduce using rule 19 (fEXP)]
    $default  reduce using rule 19 (fEXP)


State 32

    8 fEXP: fEXP • ADD fEXP
    9     | fEXP • SUBT fEXP
   10     | fEXP • MULT fEXP
   11     | fEXP • DIV fEXP
   11     | fEXP DIV fEXP •
   17     | fEXP • ADD EXP
   18     | fEXP • SUBT EXP
   19     | fEXP • MULT EXP
   20     | fEXP • DIV EXP

    ADD   shift, and go to state 14
    SUBT  shift, and go to state 15
    MULT  shift, and go to state 16
    DIV   shift, and go to state 17

    ADD       [reduce using rule 11 (fEXP)]
    SUBT      [reduce using rule 11 (fEXP)]
    MULT      [reduce using rule 11 (fEXP)]
    DIV       [reduce using rule 11 (fEXP)]
    $default  reduce using rule 11 (fEXP)


State 33

   13 fEXP: EXP • ADD fEXP
   14     | EXP • SUBT fEXP
   15     | EXP • MULT fEXP
   16     | EXP • DIV fEXP
   20     | fEXP DIV EXP •
   21     | EXP • DIV EXP
   23 EXP: EXP • ADD EXP
   24    | EXP • SUBT EXP
   25    | EXP • MULT EXP

    ADD   shift, and go to state 19
    SUBT  shift, and go to state 20
    MULT  shift, and go to state 21
    DIV   shift, and go to state 22

    ADD       [reduce using rule 20 (fEXP)]
    SUBT      [reduce using rule 20 (fEXP)]
    MULT      [reduce using rule 20 (fEXP)]
    DIV       [reduce using rule 20 (fEXP)]
    $default  reduce using rule 20 (fEXP)


State 34

    8 fEXP: fEXP • ADD fEXP
    9     | fEXP • SUBT fEXP
   10     | fEXP • MULT fEXP
   11     | fEXP • DIV fEXP
   13     | EXP ADD fEXP •
   17     | fEXP • ADD EXP
   18     | fEXP • SUBT EXP
   19     | fEXP • MULT EXP
   20     | fEXP • DIV EXP

    ADD   shift, and go to state 14
    SUBT  shift, and go to state 15
    MULT  shift, and go to state 16
    DIV   shift, and go to state 17

    ADD       [reduce using rule 13 (fEXP)]
    SUBT      [reduce using rule 13 (fEXP)]
    MULT      [reduce using rule 13 (fEXP)]
    DIV       [reduce using rule 13 (fEXP)]
    $default  reduce using rule 13 (fEXP)


State 35

   13 fEXP: EXP • ADD fEXP
   14     | EXP • SUBT fEXP
   15     | EXP • MULT fEXP
   16     | EXP • DIV fEXP
   21     | EXP • DIV EXP
   23 EXP: EXP • ADD EXP
   23    | EXP ADD EXP •
   24    | EXP • SUBT EXP
   25    | EXP • MULT EXP

    ADD   shift, and go to state 19
    SUBT  shift, and go to state 20
    MULT  shift, and go to state 21
    DIV   shift, and go to state 22

    ADD       [reduce using rule 23 (EXP)]
    SUBT      [reduce using rule 23 (EXP)]
    MULT      [reduce using rule 23 (EXP)]
    DIV       [reduce using rule 23 (EXP)]
    $default  reduce using rule 23 (EXP)


State 36

    8 fEXP: fEXP • ADD fEXP
    9     | fEXP • SUBT fEXP
   10     | fEXP • MULT fEXP
   11     | fEXP • DIV fEXP
   14     | EXP SUBT fEXP •
   17     | fEXP • ADD EXP
   18     | fEXP • SUBT EXP
   19     | fEXP • MULT EXP
   20     | fEXP • DIV EXP

    ADD   shift, and go to state 14
    SUBT  shift, and go to state 15
    MULT  shift, and go to state 16
    DIV   shift, and go to state 17

    ADD       [reduce using rule 14 (fEXP)]
    SUBT      [reduce using rule 14 (fEXP)]
    MULT      [reduce using rule 14 (fEXP)]
    DIV       [reduce using rule 14 (fEXP)]
    $default  reduce using rule 14 (fEXP)


State 37

   13 fEXP: EXP • ADD fEXP
   14     | EXP • SUBT fEXP
   15     | EXP • MULT fEXP
   16     | EXP • DIV fEXP
   21     | EXP • DIV EXP
   23 EXP: EXP • ADD EXP
   24    | EXP • SUBT EXP
   24    | EXP SUBT EXP •
   25    | EXP • MULT EXP

    ADD   shift, and go to state 19
    SUBT  shift, and go to state 20
    MULT  shift, and go to state 21
    DIV   shift, and go to state 22

    ADD       [reduce using rule 24 (EXP)]
    SUBT      [reduce using rule 24 (EXP)]
    MULT      [reduce using rule 24 (EXP)]
    DIV       [reduce using rule 24 (EXP)]
    $default  reduce using rule 24 (EXP)


State 38

    8 fEXP: fEXP • ADD fEXP
    9     | fEXP • SUBT fEXP
   10     | fEXP • MULT fEXP
   11     | fEXP • DIV fEXP
   15     | EXP MULT fEXP •
   17     | fEXP • ADD EXP
   18     | fEXP • SUBT EXP
   19     | fEXP • MULT EXP
   20     | fEXP • DIV EXP

    ADD   shift, and go to state 14
    SUBT  shift, and go to state 15
    MULT  shift, and go to state 16
    DIV   shift, and go to state 17

    ADD       [reduce using rule 15 (fEXP)]
    SUBT      [reduce using rule 15 (fEXP)]
    MULT      [reduce using rule 15 (fEXP)]
    DIV       [reduce using rule 15 (fEXP)]
    $default  reduce using rule 15 (fEXP)


State 39

   13 fEXP: EXP • ADD fEXP
   14     | EXP • SUBT fEXP
   15     | EXP • MULT fEXP
   16     | EXP • DIV fEXP
   21     | EXP • DIV EXP
   23 EXP: EXP • ADD EXP
   24    | EXP • SUBT EXP
   25    | EXP • MULT EXP
   25    | EXP MULT EXP •

    ADD   shift, and go to state 19
    SUBT  shift, and go to state 20
    MULT  shift, and go to state 21
    DIV   shift, and go to state 22

    ADD       [reduce using rule 25 (EXP)]
    SUBT      [reduce using rule 25 (EXP)]
    MULT      [reduce using rule 25 (EXP)]
    DIV       [reduce using rule 25 (EXP)]
    $default  reduce using rule 25 (EXP)


State 40

    8 fEXP: fEXP • ADD fEXP
    9     | fEXP • SUBT fEXP
   10     | fEXP • MULT fEXP
   11     | fEXP • DIV fEXP
   16     | EXP DIV fEXP •
   17     | fEXP • ADD EXP
   18     | fEXP • SUBT EXP
   19     | fEXP • MULT EXP
   20     | fEXP • DIV EXP

    ADD   shift, and go to state 14
    SUBT  shift, and go to state 15
    MULT  shift, and go to state 16
    DIV   shift, and go to state 17

    ADD       [reduce using rule 16 (fEXP)]
    SUBT      [reduce using rule 16 (fEXP)]
    MULT      [reduce using rule 16 (fEXP)]
    DIV       [reduce using rule 16 (fEXP)]
    $default  reduce using rule 16 (fEXP)


State 41

   13 fEXP: EXP • ADD fEXP
   14     | EXP • SUBT fEXP
   15     | EXP • MULT fEXP
   16     | EXP • DIV fEXP
   21     | EXP • DIV EXP
   21     | EXP DIV EXP •
   23 EXP: EXP • ADD EXP
   24    | EXP • SUBT EXP
   25    | EXP • MULT EXP

    ADD   shift, and go to state 19
    SUBT  shift, and go to state 20
    MULT  shift, and go to state 21
    DIV   shift, and go to state 22

    ADD       [reduce using rule 21 (fEXP)]
    SUBT      [reduce using rule 21 (fEXP)]
    MULT      [reduce using rule 21 (fEXP)]
    DIV       [reduce using rule 21 (fEXP)]
    $default  reduce using rule 21 (fEXP)
